@@ -46,10 +46,9 @@
       <table cellpadding="0" cellspacing="0" width="100%">
         <tr valign="top">
           <td width="33%">
-            <metal:edit use-macro="python:here.widget('mailFormat', mode='edit', use_label=1)" />
+            <metal:edit use-macro="python:here.widget('adviceStyle', mode='edit', use_label=1)" />
           </td>
           <td width="33%">
-            <metal:edit use-macro="python:here.widget('adviceStyle', mode='edit', use_label=1)" />
           </td>
           <td width="34%">
           </td>
