@@ -44,8 +44,7 @@
       <legend i18n:translate="user_preferences"></legend>
       <table cellpadding="0" cellspacing="0" width="100%">
         <tr valign="top">
-          <td width="33%" tal:define="field python:here.getField('mailFormat')">
-            <span metal:use-macro="here/widgets/field/macros/view" />
+          <td width="33%">
           </td>
           <td width="34%" tal:define="field python:here.getField('adviceStyle')">
             <span metal:use-macro="here/widgets/field/macros/view" />
