@@ -248,6 +248,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - While applying a new profile having an import_data, make sure the paramters defined on portal_plonemeeting are not changed,
   portal_plonemeeting attributes are only set the first time
 - Removed caching for MeetingItem.getMeeting
+- Removed 'mailFormat' management, we now only use 'plain' as mail format, no more HTML
 
 3.3 (2015-02-27)
 ----------------
